Fix pdf.js toolbar overflowing

--- a/src/utils.scss
+++ b/src/utils.scss
@@ -1,3 +1,11 @@
 .flex-grow-1 {
   flex-grow: 1 !important;
 }
+
+@mixin absolute {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
